fix: Z-index on menu, text color in child components

--- a/src/Vue3DatePicker/style/components/_ActionRow.scss
+++ b/src/Vue3DatePicker/style/components/_ActionRow.scss
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
+    color: $dp__text_color_def;
 
     svg {
         height: 20px;
