--- a/src/Vue3DatePicker/style/components/_Calendar.scss
+++ b/src/Vue3DatePicker/style/components/_Calendar.scss
@@ -1,6 +1,7 @@
 .dp__calendar_tb {
     font-family: $dp__font_family;
     border-collapse: collapse;
+    color: $dp__text_color_def;
 }
 
 .dp__calendar {
