--- a/src/Vue3DatePicker/style/components/_MonthYearInput.scss
+++ b/src/Vue3DatePicker/style/components/_MonthYearInput.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     height: $dp__month_year_row_height;
+    color: $dp__text_color_def;
 }
 
 .dp__month_year_col_nav {
