--- a/src/Vue3DatePicker/style/components/_TimeInput.scss
+++ b/src/Vue3DatePicker/style/components/_TimeInput.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     user-select: none;
     font-family: $dp__font_family;
+    color: $dp__text_color_def;
 }
 
 .dp__time_col {
